--- a/.gitignore
+++ b/.gitignore
@@ -150,7 +150,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-infrastructure/.terraform.lock.hcl
+infrastructure/.terraform*
 *.0_x5
 *.tfstate
 infrastructure/api.zip
