--- a/backend/api/pyproject.toml
+++ b/backend/api/pyproject.toml
@@ -10,6 +10,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dependencies = [
+    "cerealbox",
     "fastapi",
     "mangum",
 ]
