--- a/backend/api/pyproject.toml
+++ b/backend/api/pyproject.toml
@@ -13,5 +13,18 @@ dependencies = [
     "cerealbox",
     "fastapi",
     "mangum",
+    "pre-commit",
+    "pytest-cov",
 ]
 dynamic = ["version"]
+
+[tool.pytest.ini_options]
+addopts = [
+    "--cov=src",
+    "--cov-report=term-missing",
+    "--cov-branch",
+    "--cov-fail-under=90",
+]
+testpaths = [
+    "tests",
+]
