adding shelterluv pets to dynamodb

--- a/backend/sync/pyproject.toml
+++ b/backend/sync/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "cerealbox",
     "pre-commit",
     "pytest-cov",
+    "requests",
+    "requests-mock",
 ]
 dynamic = ["version"]
 
